# src/components/orders/orders.types.ts
@@ -2,15 +2,20 @@ export interface IOrders {
     sellerId: string,
     userId: string
     createdAt: Date,
-    purchasedAt: Date,
+    purchasedAt?: Date,
     deliveryCost: number,
     orderStatus: number
 }
 
-export interface IUpdateCartBodyrequest {
+export interface IUpdateFoodInCartBodyrequest {
     foodId: string,
     sellerId: string,
     quantity: number,
+}
+
+export interface IApproveOrder{
+    orderId: string,
+    status: number,
 }
 
 export interface IOrderDetailDB extends IOrders {
